--- a/src/Styles/ProductsMain.css
+++ b/src/Styles/ProductsMain.css
@@ -29,10 +29,18 @@
     } 
 }
 
-.titleR{
+.titleR {
     font-family: "Arima", system-ui;
     font-size: 20px;
     user-select: none;
+    margin-bottom: 20px;    
+}
+
+.card-container {
+    display: flex;
+
+    gap: 20px;
+    flex-wrap: wrap;
 }
 .product-card {
     user-select: none;
