--- a/src/Styles/Carrousel.css
+++ b/src/Styles/Carrousel.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1700px;
+    width: 100%;    
     margin: 2% auto;
     position: relative;
     background-color: #f9f9f9;
